--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,28 +6,25 @@ on:
             - 'v*'
     workflow_dispatch: {}
 
+permissions:
+    contents: write
+
 jobs:
     windows-build:
         runs-on: windows-latest
         steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-
-            - name: Setup Python
-              uses: actions/setup-python@v5
+            - uses: actions/checkout@v4
+            - uses: actions/setup-python@v5
               with:
                   python-version: '3.10'
-
-            - name: Install dependencies
+            - name: Install deps
               run: |
                   python -m pip install --upgrade pip
                   if (Test-Path requirements.txt) { pip install -r requirements.txt } else { pip install pyinstaller }
-
-            - name: Build EXE (onefile)
+            - name: Build EXE
               shell: pwsh
               run: >
                   pyinstaller --noconsole --onefile --name CS2ResChanger --icon assets/cs2.ico --add-data "assets\cs2.ico;assets" main.py
-
 
             - name: Upload artifact
               uses: actions/upload-artifact@v4
@@ -39,17 +36,13 @@ jobs:
         needs: windows-build
         runs-on: ubuntu-latest
         steps:
-            - name: Download build artifact
-              uses: actions/download-artifact@v4
+            - uses: actions/download-artifact@v4
               with:
                   name: CS2ResChanger-win64
                   path: ./release
-
             - name: Create GitHub Release
               uses: softprops/action-gh-release@v2
               with:
                   files: ./release/CS2ResChanger.exe
-                  draft: false
-                  prerelease: false
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
